--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -44,6 +44,12 @@ jobs:
         with:
           ruby-version: 3.3.0
           bundler-cache: true
+          
+      - name: Install Bundler
+          run: gem install bundler -v "~> 2.5"
+          
+      - name: Install dependencies
+          run: bundle install
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
