--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -34,12 +34,6 @@ jobs:
           # submodules: true
           # If using the 'assets' git submodule from Chirpy Starter, uncomment above
           # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
-    
-      - name: Install Bundler
-        run: gem install bundler -v "~> 2.5"
-          
-      - name: Install dependencies
-        run: bundle install
       
       - name: Setup Pages
         id: pages
@@ -49,6 +43,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3.0
+          bundler: 2.5.10
           bundler-cache: true
 
       - name: Build site
