--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site/SEO settings
-email: 
+email: fil
 permalink: /:year/:month/:day/:title/
 google_analytics: 
 
@@ -16,6 +16,7 @@ profile_img:
 profile: 
 social:
   github: 
+  instagram: fil
 
 # Build settings
 markdown: kramdown
