--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name:
 profile_img: 
 profile: 
 social:
-  instagram: @imarceloregalado
+  instagram: imarceloregalado
 
 # Build settings
 markdown: kramdown
