--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name:
 profile_img: 
 profile: 
 social:
-  instagram: imarceloregalado
+  instagram: https://www.instagram.com/imarceloregalado/
 
 # Build settings
 markdown: kramdown
